Added two new endpoints, and postman directory
