# server/openapi_server/controllers/default_controller.py
@@ -62,11 +62,11 @@ def codes_code_id_description_get(code_id):  # noqa: E501
 
 
 def codes_code_id_terms_get(code_id, sab=None, tty=None, rel=None):  # noqa: E501
-    """Returns a list of TermRespObjs associated with the code_id as follows Code(code_id)&lt;--ConceptI-[rel.sab]-&gt;ConceptR--&gt;Code2-[Type]-&gt;Term
+    """Returns a list of TermRespObjs associated with the code_id as follows Code(code_id)&lt;--Concept-[rel.sab]-&gt;Concept--&gt;Code-[Type]-&gt;Term
 
      # noqa: E501
 
-    :param code_id: The code identifier which is used to identify the initial ConceptI
+    :param code_id: The code identifier which is used to identify the initial Concept
     :type code_id: str
     :param sab: Restrict the ConceptI-[rel.sab]-&gt;ConceptR search to Relationships of this Sab
     :type sab: List[str]
@@ -134,17 +134,23 @@ def concepts_concept_id_semantics_get(concept_id):  # noqa: E501
     return neo4jManager.concepts_concept_id_semantics_get(concept_id)
 
 
-def concepts_concept_id_terms_get(concept_id):  # noqa: E501
-    """Returns a list of Terms associated with the concept_id
+def concepts_concept_id_terms_get(concept_id, sab=None, tty=None, rel=None):  # noqa: E501
+    """Returns a list of TermRespObjs associated with the concept_id as follows Concept(concept_id)-[rel.sab]-&gt;Concept--&gt;Code-[Type]-&gt;Term
 
      # noqa: E501
 
-    :param concept_id: The concept identifier
+    :param concept_id: The concept identifier which is used to identify the initial Concept
     :type concept_id: str
+    :param sab: Restrict the ConceptI-[rel.sab]-&gt;ConceptR search to Relationships of this Sab
+    :type sab: List[str]
+    :param tty: Restrict the Code2-[Type]-&gt;Term search to one or more TTY types
+    :type tty: List[str]
+    :param rel: One or more TTYs to search
+    :type rel: List[str]
 
-    :rtype: List[str]
+    :rtype: List[TermRespObj]
     """
-    return neo4jManager.concepts_concept_id_terms_get(concept_id)
+    return neo4jManager.concepts_concept_id_terms_get(concept_id, sab, tty, rel)
 
 
 def full_capacity_paremeterized_term_get(term, sab=None, tty=None, semantic=None, contains=None, case=None):  # noqa: E501
@@ -168,6 +174,25 @@ def full_capacity_paremeterized_term_get(term, sab=None, tty=None, semantic=None
     :rtype: List[FullCapacityTerm]
     """
     return neo4jManager.full_capacity_paremeterized_term_get(term, sab, tty, semantic, contains, case)
+
+
+def indexes_term_id_terms_get(term_id, sab=None, tty=None, rel=None):  # noqa: E501
+    """Returns a list of TermRespObjs associated with the term_id
+
+     # noqa: E501
+
+    :param term_id: The term identifier which is used to identify the initial Concept
+    :type term_id: str
+    :param sab: Restrict the ConceptI-[rel.sab]-&gt;ConceptR search to Relationships of this Sab
+    :type sab: List[str]
+    :param tty: Restrict the Code2-[Type]-&gt;Term search to one or more TTY types
+    :type tty: List[str]
+    :param rel: One or more TTYs to search
+    :type rel: List[str]
+
+    :rtype: List[TermRespObj]
+    """
+    return neo4jManager.indexes_term_id_terms_get(term_id, sab, tty, rel)
 
 
 def semantics_semantic_id_semantics_get(semantic_id):  # noqa: E501
@@ -220,6 +245,25 @@ def terms_term_id_concepts_terms_get(term_id):  # noqa: E501
     :rtype: List[ConceptTerm]
     """
     return neo4jManager.terms_term_id_concepts_terms_get(term_id)
+
+
+def terms_term_id_terms_get(term_id, sab=None, tty=None, rel=None):  # noqa: E501
+    """Returns a list of TermRespObjs associated with the term_id
+
+     # noqa: E501
+
+    :param term_id: The term identifier which is used to identify the initial Concept
+    :type term_id: str
+    :param sab: Restrict the ConceptI-[rel.sab]-&gt;ConceptR search to Relationships of this Sab
+    :type sab: List[str]
+    :param tty: Restrict the Code2-[Type]-&gt;Term search to one or more TTY types
+    :type tty: List[str]
+    :param rel: One or more TTYs to search
+    :type rel: List[str]
+
+    :rtype: List[TermRespObj]
+    """
+    return neo4jManager.terms_term_id_terms_get(term_id, sab, tty, rel)
 
 
 def tui_tui_id_semantics_get(tui_id):  # noqa: E501
